# mia-framework

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: MIA_Template.xlsx
src/mia/: __init__.py  exceptions.py  export.py  generate_template.py
tests/: test_export.py  test_generate_template.py
