[project]
name = "mia-framework"
version = "1.1.0"
description = "MIA — Map of Intent and Action. A framework for mapping natural language into structured, executable actions for AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Joao Otavio Turatti Barbosa"},
]
keywords = ["ai", "agents", "nlp", "rag", "intent-mapping", "nlp-to-sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/otavioturatti/mia-framework"
Repository = "https://github.com/otavioturatti/mia-framework"

[project.scripts]
mia-generate = "mia.generate_template:main"
mia-export = "mia.export:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
